NULL = 

SUBDIRS = private

libmps_headersdir = ${includedir}/mps

libmps_headers_HEADERS = \
        ${top_builddir}/include/mps/mt.h \
	approximation.h \
        chebyshev.h \
        context.h \
	debug.h \
        gmptools.h \
        interface.h \
        link.h \
        matrix.h \
        monomial-matrix-poly.h \
        monomial-poly.h \
        mpc.h \
        mps.h \
        mt-types.h \
	nroots-polynomial.h \
	parser.h \
        polynomial.h \
	regeneration-driver.h \
        secular-equation.h \
	types.h \
	version.h \
	$(NULL)

